<resources>
    <string name="app_name">Weather</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="updated">Updated : %1$s</string>
    <string name="percent_humidity">&#160;&#160;%1$s</string>
    <string name="wind_speed">&#160;&#160;%1$s</string>
    <string name="website"><a href="http://www.JamesFody.com">JamesFody.com</a></string>
    <string name="today">Today</string>
    <string name="five_day">Five Day</string>
    <string name="list_icon_desc">List of Cities</string>
    <string name="add_city_desc">Add a new city</string>
    <string name="settings_desc">Settings contains update interval, Temperature Units, Wind Speed Units</string>
    <string name="prev_desc">Previous city</string>
    <string name="next_desc">Next city</string>
    <string name="weather_icon_desc">Weather description image</string>
    <string name="dew_desc">Image of dew drops</string>
    <string name="wind_desc">Image of a wind sock</string>
    <string name="refresh_desc">Refresh button image</string>
    <string name="select_all">Select all</string>
    <string name="search_hint">Search</string>
    <string name="current_loc">Current location</string>
    <string name="weather">&#160;&#160;Weather</string>
    <string name="zero">0</string>
    <string name="selected">selected</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="state_country">Pennsylvania, United States</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="settings">&#160;&#160;Settings</string>
    <string name="data_sync">Data &amp; Synchronization</string>
    <string name="interval">Update Interval</string>
    <string name="interval_duration">Every 12 hrs</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_city_list">Edit City List</string>
    <string name="temp_unit_title">Temperature unit</string>
    <string name="temp_units">\u00B0 F</string>
    <string name="wind_speed_title">Wind speed unit</string>
    <string name="wind_units">MPH</string>
    <string name="delete_city"><b>Delete</b><br/><br/>City will be deleted. Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="number_selected">%1$d selected</string>
    <string name="celsius">\u00B0 C</string>
    <string name="metersecond">m/s</string>
    <string name="mph">MPH</string>
    <string name="hilo">%1$s / %2$s</string>
    <string name="updating">Updating&#8230;</string>
</resources>
