<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_ll"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical">

    <!--  List of cities, add cities, and settings  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/space_id"
            android:layout_weight="7" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/list_icon"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/list_icon_desc"
            android:src="@drawable/list" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/plus_icon"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:onClick="topBarSelection"
            android:contentDescription="@string/add_city_desc"
            android:src="@drawable/plus" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/settings_icon"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:onClick="topBarSelection"
            android:contentDescription="@string/settings_desc"
            android:src="@drawable/settings" />

    </LinearLayout>

    <!-- Previous, and next cities chevrons, current city name -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/prev_icon"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:focusable="true"
            android:clickable="true"
            android:onClick="selectView"
            android:contentDescription="@string/prev_desc"
            android:src="@drawable/prev" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_weight="6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/city"
                android:gravity="center"
                android:layout_weight="2"
                android:fontFamily="casual"
                android:textSize="16sp"
                tools:text="Reston"
                tools:ignore="NestedWeights"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/city_count"
                android:fontFamily="casual"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="8sp"
                tools:text="1 / 4"
                tools:ignore="NestedWeights"/>

        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/next_icon"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:focusable="true"
            android:clickable="true"
            android:onClick="selectView"
            android:contentDescription="@string/next_desc"
            android:src="@drawable/next" />

    </LinearLayout>

    <!-- Weather icon, current temperature -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="10"
        android:layout_marginTop="8dp">

        <Space
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            tools:ignore="NestedWeights"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2.3"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/weather_icon"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                android:contentDescription="@string/weather_icon_desc"
                android:layout_gravity="center|center_vertical" />

            <TextView
                android:id="@+id/current_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:fontFamily="casual"
                android:layout_weight="1.3"
                android:gravity="center|start"
                android:textSize="46sp"
                tools:text="48F" />



        </LinearLayout>

        <!-- Weather description, HiLo, and Real Feel -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/weather_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="casual"
                android:textAllCaps="true"
                tools:text="Clear" />

            <TextView
                android:id="@+id/hilo_temperature"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="top|center"
                tools:text="58/38 RealFeel 50" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <!-- Humidity and wind direction -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/dew"
                    android:drawableStart="@drawable/dew"
                    android:paddingRight="4dp"
                    android:paddingEnd="4dp"
                    android:fontFamily="casual"
                    android:layout_gravity="end"
                    android:gravity="end"
                    tools:text="64%" />

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingRight="4dp"
                    android:fontFamily="casual"
                    android:drawableLeft="@drawable/wind"
                    android:drawableStart="@drawable/wind"
                    android:gravity="end"
                    android:layout_gravity="end"
                    tools:text="WSW 6MPH" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Today / 5 Day Layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/today_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:gravity="center"
            android:background="#1a9ccb"
            android:onClick="selectFragment"
            android:text="@string/today"
            tools:text="Today"
            tools:ignore="NestedWeights"/>

        <TextView
            android:id="@+id/fiveDay_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:onClick="selectFragment"
            android:background="#80093643"
            android:gravity="center"
            android:text="@string/five_day"
            tools:text="5 Days" />

    </LinearLayout>

    <!-- 5 Day Forecast Layout -->

    <FrameLayout
        android:name="com.jamesfody.weatherforecast.TodayFragment"
        android:id="@+id/fragment_place"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <!--</LinearLayout>-->

    <!-- Credit / Refresh Layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/resetbar_ll"
        android:layout_weight=".5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:autoLink="web"
            android:paddingLeft="4dp"
            android:textColorLink="#FFF"
            android:fontFamily="casual"
            android:text="@string/website"
            tools:text="JamesFody.com"
            tools:ignore="NestedWeights"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/updateTime"
                android:fontFamily="casual"
                android:textSize="12sp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="updateWeather"
                android:gravity="end"
                android:drawableEnd="@drawable/refresh"
                android:drawableRight="@drawable/refresh"
                tools:text="Updated 8:39 PM"/>

            <!-- Loading indicator is only shown before the first load -->
            <ProgressBar
                android:id="@+id/loading_indicator"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

