<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33B5E5"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:background="#0E3F66"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:buttonTint="@color/white"
                android:layout_weight="2"
                android:onClick="selectAll"
                android:focusable="true"
                android:clickable="true"
                android:id="@+id/select_all_cb"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:focusable="false"
                android:id="@+id/select_all_tv"
                android:textColor="@color/white"
                android:text="@string/select_all"
                android:layout_weight="8"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/count_selected"
                android:focusable="false"
                android:textSize="12sp"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:gravity="start"
                android:layout_weight="3" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>



            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:id="@+id/delete_list_view">
            </ListView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="#0E3F66"
        android:layout_alignParentBottom="true">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/cancel_tv"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="selectAll"
            android:paddingTop="2dp"
            android:fontFamily="casual"
            android:text="@string/cancel"
            android:textColor="@color/daytime_theme"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/delete_tv"
            android:layout_weight="1"
            android:onClick="selectAll"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="2dp"
            android:fontFamily="casual"
            android:text="@string/delete"
            android:textColor="@color/daytime_theme"
            android:textStyle="bold"
            android:textAllCaps="true"/>

    </LinearLayout>

</RelativeLayout>
